Updated login and registration logic for AyurSutra